Portfolio page redesign plus some responsive stuff.

--- a/views/index.haml
+++ b/views/index.haml
@@ -180,13 +180,10 @@
   
                   %tr
                     %td.date 
-                      New York, NY / San Francisco, CA
+                      New York, NY
                       .job
                         %a(href="http://www.themuse.com/" target="_blank")
                           The Muse
-                        &#38;
-                        %a(href="http://thedailymuse.com/" target="_blank")
-                          The Daily Muse
                         
                     %td.date 
                       San Francisco, CA
