--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -68,10 +68,15 @@ $aqua: #59edd3;
     position: absolute;
     top: 0px;
     left: 0px;
-    img {
-      width: $width;
-      height: $height;
-    }
+    bottom: 0px;
+    right: 0px;
+    background-color: #ccc;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+    -moz-box-shadow: inset 0 0 80px 3px #000;
+    -webkit-box-shadow: inset 0 0 80px 3px #000;
+    box-shadow: inset 0 0 80px 3px #000;
+
   }  
 }
 
@@ -178,6 +183,7 @@ body {
       text-decoration: underline;
     }
   }
+  .container { padding: 0px; }
 }
 
 .generic { float: left; width: 100% }
@@ -208,32 +214,36 @@ img { border: 0px }
     @extend .generic; 
     z-index: 600;
     position: fixed;
-    width: 100%px;
+    width: 100%;
     height: 80px;
     margin: 0;
     border-bottom: 8px solid #454343;
     background-color: rgba(255, 255, 255, 0.8);
-    a { 
+    .container { position: relative; }
+    .logo { 
       font-family: Georgia; 
-      font-size: 60px; 
+      font-size: 58px; 
+      height: 108px;
+      width: 35%;
       font-style: italic; 
       text-decoration: none; 
       color: #f65f5f; 
-      float: left;
       letter-spacing: -4px;
-    }
-    .logo {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      bottom: -27px;
+      left: 0px;
+      padding-left: 85px;
+      background: url('/images/logo.png') no-repeat 0px 0px;
+      display: inline-block;
     }
     .dots { 
-      position: relative;  
-      width: 100%; 
+      position: relative; 
       height: 80px; 
       z-index: 1;
+      width: 65%;
+      float: right;
       margin: 0 auto;
-      background: url('/images/header-new.png') no-repeat 0px 0px; 
+      background: url('/images/header-new.png') repeat 0px 0px; 
       nav {
         z-index: 2;
         position: absolute;
@@ -242,21 +252,37 @@ img { border: 0px }
         overflow: hidden;
         bottom: 8px;
         right: 0px;
-        a {
-          @extend .generic; 
+        .nav-btn {
+          float: right;
           height: 80px;
-          position: relative;
-          float: right; 
           width: 75px;
-          img {
+          position: relative;
+        }
+        a {
+          text-align: center;
+          display: block;
+          font-family: "Archer-Book", Georgia, Serif;
+          font-size: 14px;
+          &.nav-about {
+            background-color: $neon-green;
+            bottom: 0px; 
+            color: $almost-black;
+          }
+          &.nav-portfolio {
+            background-color: $almost-black;
+            color: #fff;
+          }
+          &.nav-blog {
+            background-color: $aqua;
+            color: $almost-black;
+          }
+          &.nav-about, &.nav-portfolio, &.nav-blog {
             position: absolute;
-            left: 0px;
-          }
-          &.on {
-            img { bottom: -8px; }
-          }
-          &.off { 
-            img { bottom: -32px; }
+            padding: 30px 10px 0 10px;
+            height: 80px;
+            width: 75px;
+            &.on { bottom: -8px; }
+            &.off { bottom: -32px; }
           }
         }
       }
@@ -289,7 +315,7 @@ img { border: 0px }
 .portfolio {
   @include bring_to_front;
   width: 100%;
-  padding: 80px 0;
+  padding: 80px 0 50px 0;
   .full-width {
     background-color: #f1f1f1;
     margin-bottom: 10px;
@@ -300,6 +326,7 @@ img { border: 0px }
     .section_label {
       margin: 0px auto;
       max-width: 650px;
+      padding: 0 20px;
       font-family: "Helvetica Neue", Helvetica, Sans-serif;
       span {
         font-size: 20px;
@@ -309,10 +336,9 @@ img { border: 0px }
         display: block;
       }
       p {
-        
         font-size: 13px;
         font-weight: 200;
-        padding: 0 0 15px 0;
+        padding-bottom: 15px;
         line-height: 1.4em;
         a { font-weight: normal; }
       }
@@ -392,6 +418,7 @@ img { border: 0px }
       z-index: 5000;
       outline: 0px;
       opacity: 1;
+      filter: alpha(opacity=100); /* For IE8 and earlier */
       font-weight: 200;
       text-shadow: none;
       &.white { color: #fff; }
@@ -882,13 +909,95 @@ body {
 /***********************responsive***********************/
 
 body {
-  // Medium devices i.e. Small Desktop (< 1300px)
-  @media (max-width: 1299px) {
+  // Medium devices i.e. Small Desktop (< 1200px)
+  @media (max-width: 1199px) {
+    .content {
+      header {
+        .logo { 
+          font-size: 50px; 
+          padding-top: 7px;
+        }
+      }
+    }
+  }
+  // Small devices i.e. Tablets & Mobile (< 992px)
+  @media (max-width: 991px) {
+    .content {
+      header {
+        .logo { 
+          font-size: 35px; 
+          padding-top: 20px;
+        }
+      }
+    }
+    .portfolio {
+      .web, .print, .woodwork {
+        .section_label {
+          span {
+            font-size: 24px;
+          }
+        }
+      }
+    }
+  }
+  // Extra small devices i.e. Mobile (< 768px)
+  @media (max-width: 767px) {
+    .content {
+      .container { 
+        &.header { padding: 0px; }
+      }
+      header {
+        .logo { 
+          font-size: 30px; 
+          padding-top: 27px;
+        }
+        .dots {
+          nav {
+            .nav-btn {
+              width: 60px
+            }
+            a {
+              &.nav-about, &.nav-portfolio, &.nav-blog {
+                padding: 30px 5px 0 5px;
+                font-size: 12px;
+                width: 60px
+              }
+            }
+          }
+        }
+      }
+    }
+    .portfolio {
+      .web, .print, .woodwork {
+        .section_label {
+          span {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+  // Extra small devices i.e. Mobile (< 632px)
+  @media (max-width: 631px) {
+    .content {
+      header {
+        .logo { 
+          width: 50%; 
+          font-size: 28px;
+        }
+        .dots { width: 50%; }
+      }
+    }
+  }
+  // Extra small devices i.e. Mobile (< 442px)
+  @media (max-width: 441px) {
     .content {
       header {
         .logo {
-          display: none;
+          font-size: 0px;
+          width: 28%;
         }
+        .dots { width: 72%; }
       }
     }
   }
