--- a/views/blog.haml
+++ b/views/blog.haml
@@ -14,22 +14,22 @@
       .title-date= @blog['date']
       .clear
       .blog_post
-        .clear
-        %h4= @blog['title']
-        .clear
+        .block
+          %h4= @blog['title']
         = File.open("blogs/#{@blog['url']}.html").read
         .fb-comment-wrapper
           .fb-comments{'data-href' => "http://www.anaenders.com/blog/#{@blog['url']}", 'data-num-posts' => 5, 'data-width' => 320}
 
     .pagination
-      - if @prev
-        .prev
-          %a(href="/blog/#{@prev['url']}")
-            %img(src="/images/blog/previous.jpg" alt="previous")/
       - if @next
         .next
           %a(href="/blog/#{@next['url']}")
             %img(src="/images/blog/next.jpg" alt="next")/
+
+      - if @prev
+        .prev
+          %a(href="/blog/#{@prev['url']}")
+            %img(src="/images/blog/previous.jpg" alt="previous")/
          
     .archives
       %ul
