--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -291,8 +291,8 @@ img { border: 0px }
 
 .scroll {
   position: fixed;
-  right: 40px;
-  bottom: 100px;
+  right: 10px;
+  bottom: 10px;
   z-index: 1000;
   background-color: rgba(0,0,0,.80);
   font-family: Georgia;
@@ -309,7 +309,7 @@ img { border: 0px }
   &:hover { color: #ddd; }
 }
 
-/***********************portfolio***********************/
+/*********************** Portfolio ***********************/
 
 .portfolio {
   @include bring_to_front;
@@ -389,7 +389,7 @@ img { border: 0px }
   }
   .woodwork {
     @include frame($neon-green);
-    .small-thumb.one { @include thumb-container(214px, 160px); }
+    .small-thumb.one { @include thumb-container(213px, 160px); }
     .small-thumb.two { @include thumb-container(203px, 160px); }
     .small-thumb.three { @include thumb-container(195px, 160px); }
     .small-thumb.four { @include thumb-container(309px, 160px); }
@@ -490,6 +490,7 @@ body {
   margin-bottom: 30px;
   ul {
     overflow: hidden;
+    background-color: #333;
     width: 100%;
     height: 351px;
     list-style-type: none;
@@ -816,7 +817,7 @@ body {
   }
 }
 
-/***********************blog***********************/
+/*********************** Blog ***********************/
 
 .blog {
   @include main_container;
@@ -838,44 +839,44 @@ body {
       background: url('/images/blog/title_bg.png') repeat 0px 0px;
     }
     .blog_post {
-      margin: 0 auto;
+      margin: 0px auto;
       width: 100%;
       clear: both;
       text-align: center;
-      h4 { 
-        text-transform: capitalize;
-        font-family: "Archer-Book", Georgia, Serif;
-        margin: 0px;
-        font-size: 20px;
-        padding: 30px 150px; 
-        font-weight: normal; 
-        text-align: center;
-        background:url('/images/ornament_left.png') no-repeat top left,url('/images/ornament_right.png') no-repeat top right;
-      }
-      .blog_content { 
-        padding: 0px 30px;
-        // @include columns(2, 10px);
-        &.narrow { 
-          max-width: 560px; 
-          margin: 0 auto 20px auto;
+      .block {
+        margin: 40px 0;
+        h4 { 
+          text-transform: capitalize;
+          font-family: "Archer-Book", Georgia, Serif;
+          font-size: 35px;
+          display: inline; 
+          margin: 0px;
+          padding: 30px 160px; 
+          font-weight: normal; 
+          text-align: center;
+          background:url('/images/ornament_left.png') no-repeat top left,url('/images/ornament_right.png') no-repeat top right;
+          clear: both;
         }
+      }
+      .blog-content { 
+        max-width: 600px; 
+        margin: 15px auto;
       }
       .fb-comment-wrapper {
         max-width: 320px;
-        margin: 0 auto;
+        margin: 30px auto 0 auto;
       }
-      p { line-height: 1.3em; padding-bottom: 12px; font-size: 12px; text-align: left }
+      p { 
+        line-height: 1.3em; 
+        margin-bottom: 15px; 
+        font-size: 17px; 
+        text-align: left 
+      }
       a { font-weight: normal; color: $dark-grey; font-style: italic }
-      .image, img { 
-        text-align: center; 
-        margin: 20px 0;
-        width: 100%; 
-      }
       .image {
-        &.narrow { 
-          max-width: 500px; 
-          margin: 0 auto 20px auto;
-        }
+        width: 100%;
+        max-width: 600px;
+        margin: 15px auto;
       }
     }
   }  
@@ -884,13 +885,13 @@ body {
     margin: 0 0 20px 0;
     .prev { 
       width: 50%; 
-      float: left; 
-      text-align: left;
+      float: right; 
+      text-align: right;
     }
     .next { 
       width: 50%; 
-      float: right; 
-      text-align: right;
+      float: left; 
+      text-align: left;
     }
   }
 } 
