Blog now responsive.

--- a/views/blog.haml
+++ b/views/blog.haml
@@ -19,23 +19,22 @@
         = File.open("blogs/#{@blog['url']}.html").read
         .fb-comment-wrapper
           .fb-comments{'data-href' => "http://www.anaenders.com/blog/#{@blog['url']}", 'data-num-posts' => 5, 'data-width' => 320}
+        .pagination
+          - if @prev
+            .prev
+              %a(href="/blog/#{@prev['url']}")
+                &lsaquo; Previous
 
-    .pagination
-      - if @next
-        .next
-          %a(href="/blog/#{@next['url']}")
-            %img(src="/images/blog/next.jpg" alt="next")/
-
-      - if @prev
-        .prev
-          %a(href="/blog/#{@prev['url']}")
-            %img(src="/images/blog/previous.jpg" alt="previous")/
-         
-    .archives
-      %ul
-        - @blogs.reverse.each do |b|
-          %li 
-            %a(href="/blog/#{b['url']}")= b['title']
-            %br/
-            %span= b['date']
+          - if @next
+            .next
+              %a(href="/blog/#{@next['url']}")
+                Next &rsaquo;
+             
+      .archives
+        %ul
+          - @blogs.reverse.each do |b|
+            %li 
+              %a(href="/blog/#{b['url']}")= b['title']
+              %br/
+              %span= b['date']
 .clear
