--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,17 +8,15 @@
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0, user-scalable=no"}
     %meta{:name => "description", :content => "Ana Enders"}/
     %link(href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ana Enders Blog RSS")/
-    %link(href="/stylesheets/jquery-ui.css" media="screen" rel="stylesheet" type="text/css")/
-    %link(href="/stylesheets/bootstrap.min.css" media="screen" rel ="stylesheet" type="text/css")/
-    %link(href="/stylesheets/app.css" media="screen" rel ="stylesheet" type="text/css")/
-    %link(href="/images/favicon.ico" rel ="icon" type="image/x-icon")/    
-    %script(src="/javascripts/jquery-1.7.2.min.js" type="text/javascript")
-    %script(src="/javascripts/jquery-ui-1.8.19.min.js" type="text/javascript")
+    %link(href="/images/favicon.ico" rel ="icon" type="image/x-icon")/
+    %link(href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" )/
+    %link(href="/stylesheets/app.css" media="screen" rel ="stylesheet" type="text/css")
+    %script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.js")
     %script(src="/javascripts/sugar-1.2.4.min.js" type="text/javascript")
     %script(src="/javascripts/application.js" type="text/javascript")
-    %script(src="/javascripts/dialog.js" type="text/javascript")
-    %script(src="/javascripts/bootstrap.min.js" type="text/javascript")
-    
+
+    %script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+
     / [if lt IE 9]
       %script(src="/javascripts/html5shiv.js" type="text/javascript")/
     :javascript
