Removed unused images and other minor edits.

--- a/views/index.haml
+++ b/views/index.haml
@@ -19,6 +19,8 @@
     %li.slide17
     %li.slide18
     %li.slide19
+    %li.slide20
+    %li.slide21
 
 .about.container
   .casual-intro.col-lg-7.col-md-7.col-sm-7.col-xs-12
