New images to slideshow.

--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -536,6 +536,8 @@ body {
       &.slide17 { background-image: url("/images/about/slide17.jpg"); }
       &.slide18 { background-image: url("/images/about/slide18.jpg"); }
       &.slide19 { background-image: url("/images/about/slide19.jpg"); }
+      &.slide20 { background-image: url("/images/about/slide20.jpg"); }
+      &.slide21 { background-image: url("/images/about/slide21.jpg"); }
     }
   }
 }
