--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -420,16 +420,6 @@ img { border: 0px }
 
 .detail-container {
   @include clearfix;
-  &.long-content {
-    .inner-container {
-      .project-description {
-        @include clearfix;
-        float: left;
-        width: 223px;
-        p { padding: 15px 15px 21px 15px; }
-      }
-    }
-  }
   .inner-container {
     @include clearfix;
     width: 100%;
@@ -1085,6 +1075,7 @@ body {
           .slide_window {
             .slide_tiles {
               height: 450px;
+              .next_container { height: 450px; }
               .slide_tiles_container {
                 .slide_inner {
                   width: 967px;
@@ -1129,7 +1120,7 @@ body {
     .portfolio {
       .section {
         h1 {
-          font-size: 18px;
+          font-size: 17px;
         }
         p { font-size: 1em; }
       }
@@ -1288,6 +1279,21 @@ body {
           }
         }
       }
+    }
+    .close {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      color: #fff;
+      line-height: 1.3em;
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.5);
+      margin: 0px;
+      top: -10px;
+      right: -10px;
+      font-size: 1.2em;
+      &:hover { color: #fff; }
     }
     .content {
       header {
