--- a/views/index.haml
+++ b/views/index.haml
@@ -20,23 +20,25 @@
     %li.slide18
     %li.slide19
     %li.slide20
-    %li.slide21
 
 .about.container
   .casual-intro.col-lg-7.col-md-7.col-sm-7.col-xs-12
     %p
       %span
         Hello
-      hello, and thank you for visiting!! I am a web developer based in New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logo and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
+      hello, and thanks for visiting!! I&rsquo;m a web designer and developer; what some might call a designerd. I spend most of my time coding user interfaces and handing off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them and sometimes I do logo and branding work that require no coding at all. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I like interior design, antique and mid-century modern furniture, the French language, home cooked meals, and I enjoy cuddling with my clingy cat Toby and my hyperactive dog Butters while bing watching TV shows with 
+      %a(href="http://www.ianenders.com" target="_blank")
+        Ian.
+      I studied music performance at Carnegie Mellon University, then took up wood working, began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
-      Have a look at 
+      Have a look at
       %a(href="/")my portfolio 
       and let me know
       %a(href="mailto:ana.enders@gmail.com") what you think!
     %p.thanks
-      &#45; Thank You!!
+      &#45; Cheers!!
   .col-lg-5.col-md-5.col-sm-5.col-xs-12
     .twitter-feed
       %a.twitter-timeline(href="https://twitter.com/anaenders" data-widget-id="361647706579550210")Tweets by @anaenders
