--- a/views/index.haml
+++ b/views/index.haml
@@ -129,7 +129,7 @@
               %li beginner
           .frontend
             %p 
-              Frontend Web
+              Frontend Technologies
             .data
               .expert
               .graph-header
@@ -137,7 +137,7 @@
             .data
               .intermediate.alt
               .graph-header
-              %label Javascript
+              %label JavaScript
             .data
               .expert
               .graph-header
@@ -145,7 +145,7 @@
             .data
               .intermediate.alt
               .graph-header
-              %label JQuery &#38; JQuery-UI
+              %label JQuery
             .data
               .expert
               .graph-header
@@ -175,7 +175,7 @@
             .data
               .beginner
               .graph-header 
-              %label PHP/MySQL
+              %label MySQL &#38; PHP
             .data
               .beginner.alt
               .graph-header 
@@ -193,7 +193,7 @@
               %li beginner
           .design
             %p
-              Graphic Design
+              Design
             .data
               .beginner.alt
               .graph-header 
@@ -205,7 +205,11 @@
             .data 
               .advanced.alt
               .graph-header.dark
-              %label Print/Web Design
+              %label UI Design
+            .data 
+              .intermediate
+              .graph-header.dark
+              %label UX Design
           .clear.visible-xs
           .skill-list.visible-xs
             %ul
@@ -217,11 +221,11 @@
             %p
               Additional Skills
             .data 
-              .expert
+              .expert.alt
               .graph-header 
               %label Detail Oriented
             .data
-              .expert.alt
+              .expert
               .graph-header.dark
               %label Fluent Spanish
 
