--- a/views/index.haml
+++ b/views/index.haml
@@ -205,11 +205,11 @@
             .data 
               .advanced.alt
               .graph-header.dark
-              %label UI Design
+              %label Graphic Design
             .data 
               .intermediate
               .graph-header.dark
-              %label UX Design
+              %label UX &#38; UI Design
           .clear.visible-xs
           .skill-list.visible-xs
             %ul
