--- a/views/index.haml
+++ b/views/index.haml
@@ -22,7 +22,7 @@
     %li.slide20
 
 .about.container
-  .casual-intro.col-lg-7.col-md-7.col-sm-7.col-xs-12
+  .casual-intro.col-lg-8.col-md-8.col-sm-8.col-xs-12
     %p
       %span
         Hello
@@ -34,12 +34,12 @@
       I studied music performance at Carnegie Mellon University, then took up wood working, began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
       Have a look at
-      %a(href="/")my portfolio 
+      %a(href="/portfolio")my portfolio 
       and let me know
       %a(href="mailto:ana.enders@gmail.com") what you think!
     %p.thanks
       &#45; Cheers!!
-  .col-lg-5.col-md-5.col-sm-5.col-xs-12
+  .col-lg-4.col-md-4.col-sm-4.col-xs-12
     .twitter-feed
       %a.twitter-timeline(href="https://twitter.com/anaenders" data-widget-id="361647706579550210")Tweets by @anaenders
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
