--- a/views/portfolio.haml
+++ b/views/portfolio.haml
@@ -3,7 +3,7 @@
     .container 
       .section
         %h1
-          Portfolio
+          Welcome to My Portfolio
         %p
           Check out the fancy stuff I've built! The professional and personal web development sections lists sites where my role was primarily implementation, with the occasional design gig. The section called "Print" shows mostly personal and school related works of art. "Woodworking" showcases custom furniture I built or help to build back in my woodworking days.
         %p 
