--- a/views/index.haml
+++ b/views/index.haml
@@ -28,9 +28,10 @@
         Hello
       hello, and thanks for visiting!! I&rsquo;m a web designer and developer; what some might call a designerd. I spend most of my time coding user interfaces and handing off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them and sometimes I do logo and branding work that require no coding at all. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I like interior design, antique and mid-century modern furniture, the French language, home cooked meals, and I enjoy cuddling with my clingy cat Toby and my hyperactive dog Butters while bing watching TV shows with 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I like interior design, antique and mid-century modern furniture, the French language, home cooked meals, and I enjoy cuddling with my clingy cat Toby and my hyperactive dog Butters while binge watching TV shows with 
       %a(href="http://www.ianenders.com" target="_blank")
         Ian.
+    %p
       I studied music performance at Carnegie Mellon University, then took up wood working, began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
       Have a look at
@@ -262,13 +263,12 @@
                     .table-data.date 
                       San Francisco, CA
                       .job
-                        %a(href="/")
-                          Self Employed
+                        Self Employed
                     .table-data.date 
                       New York, NY
                       .job
                         %a(href="http://intersectnyc.com" target="_blank")
-                          Intersect NYC
+                          Intersect NYC (a.k.a. Crown Partners a.k.a. Razorfish)
                     .table-data.date 
                       Brooklyn, NY
                       .job
@@ -289,23 +289,23 @@
                     .table-data 
                       July 2012 &#45; Present 
                     .table-data
-                      September 2011 &#45; July 2012 
+                      09/2011 &#45; 07/2012 
                       %br/
                       (9 months)
                     .table-data
-                      September 2008 &#45; September 2011 
+                      09/2008 &#45; 09/2011 
                       %br/
                       (3 years 1 month)
                     .table-data
-                      June 2008 &#45; September 2008 
+                      06/2008 &#45; 09/2008 
                       %br/
                       (4 months)	
                     .table-data
-                      August 2008 &#45; August 2008 
+                      08/2008 &#45; 08/2008 
                       %br/
                       (1 month)	
                     .table-data 
-                      February 2006 &#45; February 2007 
+                      02/2006 &#45; 02/2007 
                       %br/
                       (1 year 1 month)	
 
