Updated resume and changes to copy.

--- a/views/index.haml
+++ b/views/index.haml
@@ -26,18 +26,20 @@
     %p
       %span
         Hello
-      and thanks for visiting!! I&rsquo;m a web designer and developer; what some might call a designerd. I spend most of my time coding user interfaces and handing off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them and sometimes I do logo and branding work that require no coding at all. Whatever the case is, the goal is to create an awesome web experience.
+      and thanks for visiting!! I&rsquo;m a web designer and developer&mdash;what some might call a designerd. I spend most of my time coding user interfaces and handing off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them and sometimes I do logo and branding work that require no coding at all. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I like interior design, antique and mid-century modern furniture, the French language, home cooked meals, and I enjoy cuddling with my clingy cat Toby and my hyperactive dog Butters while binge watching TV shows with
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. Things I enjoy include interior design, Bea Arthur ice cream cone from Big Gay Ice Cream Shop in the East Village, my home-made Saturday morning waffles, and cuddling with my clingy cat Toby and my hyperactive dog Butters while binge watching TV shows with
       %a(href="http://www.ianenders.com" target="_blank")
         Ian.
+      Things I dislikes include the entire winter and summer seasons, waking up early, and IPA's.
     %p
       I studied music performance at Carnegie Mellon University, then took up wood working, began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done.
     %p
-      Have a look at
+      Check out
       %a(href="/portfolio")my portfolio
-      and let me know
-      %a(href="mailto:ana.enders@gmail.com") what you think!
+      , and
+      %a(href="/Ana_Enders_Resume.pdf" target="_blank") my resume
+      to learn more about what I do.
     %p.thanks
       &#45; Cheers!!
 
@@ -304,9 +306,9 @@
                     .table-data
                       As the Senior Front-end Engineer, I deliver Backbone HTML, SASS, and JavaScript via JQuery and CoffeeScript for our Python &#38; Tornado based app. I also provide designs from concept to implementation.
                     .table-data
-                      Freelancing for old clients in need of front-end adjustments to their existing sites.
+                      Freelancing for old clients in need of front-end adjustments to their existing sites. Also worked on some logo and branding designs.
                     .table-data
-                      As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
+                      As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom e-commerse sites and content management software.
                     .table-data
                       In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
                     .table-data
